Fix nav buttons on "skinny desktop"
At the narrowest desktop widths (850-950), the nav buttons were overlapping the trib logo, so I scrunched them at that size.

--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -123,6 +123,7 @@ nav.navbar {min-height: $nav_height;}
     	li{
     		margin:0 15px 0 0;
 			height:100%;
+			width: 17%;
     		&:last-child{
     			margin:0;
     		}
@@ -157,5 +158,14 @@ nav.navbar {min-height: $nav_height;}
 			// height:125%;
 			transition:150ms all ease;
 		}
+	}
+}
+
+@media all and (min-width: 1000px){
+
+	.nav-buttons li{
+    		// Just a little tweak once we have more display space.
+    		// ... b/c one line is best, not wrapper.
+			width: auto;
 	}
 }
